<!--
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Janas Chatkevicius as part of the Nanodegree At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be your own work, hence
  ~ submitting this project as yours will cause you to break the Udacity Honor Code
  ~ and the suspension of your account.
  ~
  ~ Me, the author of the project, allow you to check the code as a reference, but if
  ~ you submit it, it's your own responsibility if you get expelled.
  ~
  ~ Copyright (c) 2018 Janas Chatkevicius
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Quiz About Solar System</string>
    <string name="question_one_text_view">1. How many planets are in our solar system?</string>
    <string name="question_two_text_view">2. How many dwarf planets are in our solar system?</string>
    <string name="question_three_text_view">3. Which of the below is no longer considered as a planet?</string>
    <string name="question_four_text_view">4. How many moons Mars has?</string>
    <string name="question_five_text_view">5. Which planet is the most hottest?</string>
    <string name="question_six_text_text">6. What is the name of the solar system star?</string>
    <string name="question_seven_text_view">7. Which planets are often referred to as \"ice giants\"?</string>
    <string name="background_image">background image</string>
    <string name="question_one_answer_one_radiobutton">5</string>
    <string name="question_one_answer_two_radiobutton">6</string>
    <string name="question_one_answer_three_radiobutton">8</string>
    <string name="question_two_answer_one_radiobutton">5</string>
    <string name="question_two_answer_two_radiobutton">7</string>
    <string name="question_two_answer_three_radiobutton">8</string>
    <string name="question_three_answer_one_radiobutton">Neptun</string>
    <string name="question_three_answer_two_radiobutton">Mercury</string>
    <string name="question_three_answer_three_radiobutton">Pluton</string>
    <string name="question_four_answer_one_radiobutton">2</string>
    <string name="question_four_answer_two_radiobutton">1</string>
    <string name="question_four_answer_three_radiobutton">3</string>
    <string name="question_five_answer_one_radiobutton">Venus</string>
    <string name="question_five_answer_two_radiobutton">Mercury</string>
    <string name="question_five_answer_three_radiobutton">Uran</string>
    <string name="question_six_edit_text_hint">Enter name</string>
    <string name="question_seven_answer_one_checkbox">Uranus</string>
    <string name="question_seven_answer_two_checkbox">Neptune</string>
    <string name="question_seven_answer_three_checkbox">Earth</string>
    <string name="question_seven_answer_four_checkbox">Jupiter</string>
    <string name="submit_button_text">Submit</string>
</resources>
